# ds-bootcamp

./: .pylintrc  README.md  activate  install  pyproject.toml
hooks/: pre-commit
src/modulo1/: Final_M1_4M_DataScience_ipynb.ipynb  Final_M1_DS.ipynb  M1S2.ipynb  MIS3_Librerias_y_Pandas.ipynb  MIS4_POO.ipynb  README.md  Reto_M1S2.ipynb  Reto_MIS1.ipynb  Reto_MIS3.ipynb  Reto_MIS4.ipynb  cajero.py  module1.py  semana3.txt  titanic.py
src/modulo2/: Reto M2S2.xlsx  Reto M2S5.xlsx
tereas/: Reto_MIS1.ipynb
